[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/main-music.tres" type="AudioStream" id=3]
[ext_resource path="res://scripts/world.gd" type="Script" id=5]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" type="Node2D" parent="."]

[node name="Player" parent="Player" instance=ExtResource( 1 )]
position = Vector2( 41.166, 297.719 )
speed = 400

[node name="EnemySpawners" type="Node2D" parent="."]

[node name="EnemySpawner" type="Node2D" parent="EnemySpawners"]
position = Vector2( 1044.13, 136.021 )

[node name="EnemySpawner2" type="Node2D" parent="EnemySpawners"]
position = Vector2( 1048.54, 189.694 )

[node name="EnemySpawner6" type="Node2D" parent="EnemySpawners"]
position = Vector2( 1048.54, 231.603 )

[node name="EnemySpawner3" type="Node2D" parent="EnemySpawners"]
position = Vector2( 1048.54, 333.803 )

[node name="EnemySpawner4" type="Node2D" parent="EnemySpawners"]
position = Vector2( 1048.54, 394.093 )

[node name="EnemySpawner5" type="Node2D" parent="EnemySpawners"]
position = Vector2( 1048.54, 440.414 )

[node name="Bullets" type="Node2D" parent="."]

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Background"]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceEmitter" type="Node2D" parent="."]

[node name="Stars" type="CPUParticles2D" parent="SpaceEmitter"]
position = Vector2( 1037.13, 281.158 )
rotation = 1.5708
amount = 100
lifetime = 10.0
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 128.0
initial_velocity = 10.0
initial_velocity_random = 1.0

[node name="StarSlow" type="CPUParticles2D" parent="SpaceEmitter"]
position = Vector2( 1041.35, 77.4102 )
rotation = 1.5708
amount = 40
lifetime = 10.0
randomness = 1.0
fixed_fps = 30
emission_shape = 1
emission_sphere_radius = 60.0
initial_velocity = 10.0
initial_velocity_random = 1.0

[node name="StarSlow2" type="CPUParticles2D" parent="SpaceEmitter"]
position = Vector2( 1057.31, 482.089 )
rotation = 1.5708
amount = 40
lifetime = 10.0
randomness = 1.0
fixed_fps = 30
emission_shape = 1
emission_sphere_radius = 60.0
initial_velocity = 10.0
initial_velocity_random = 1.0

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 1.2
autoplay = true

[node name="PowerupTimer" type="Timer" parent="."]

[node name="PowerupSpawners" type="Node2D" parent="."]

[node name="PowerupSpawner2" type="Node2D" parent="PowerupSpawners"]
position = Vector2( 1070.68, 258.646 )

[node name="PowerupSpawner3" type="Node2D" parent="PowerupSpawners"]
position = Vector2( 1052.64, 531.581 )

[node name="PowerupSpawner4" type="Node2D" parent="PowerupSpawners"]
position = Vector2( 1042.86, 39.0951 )

[node name="PowerupSpawner5" type="Node2D" parent="PowerupSpawners"]
position = Vector2( 1083.46, 189.473 )
[connection signal="game_over" from="Player/Player" to="HUD" method="_on_Player_game_over"]
[connection signal="game_over" from="Player/Player" to="." method="_on_Player_game_over"]
[connection signal="lives_update" from="Player/Player" to="HUD" method="_on_Player_lives_update"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
